--- a/gnu-c-intro-and-ref.html
+++ b/gnu-c-intro-and-ref.html
@@ -30,37 +30,11 @@ modify this GNU manual." -->
 <link href="#Symbol-Index" rel="index" title="Symbol Index">
 <link href="#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="/manual" rel="up" title="(dir)">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <link rel="stylesheet" href="https://base.wingram.org/css/base.css">
 
-<style type="text/css">
-<!--
-a.summary-letter {text-decoration: none}
-blockquote.indentedblock {margin-right: 0em}
-div.display {margin-left: 3.2em}
-div.example {margin-left: 3.2em}
-div.lisp {margin-left: 3.2em}
-kbd {font-style: oblique}
-pre.display {font-family: inherit}
-pre.format {font-family: inherit}
-pre.menu-comment {font-family: serif}
-pre.menu-preformatted {font-family: serif}
-span.nolinebreak {white-space: nowrap}
-span.roman {font-family: initial; font-weight: normal}
-span.sansserif {font-family: sans-serif; font-weight: normal}
-ul.no-bullet {list-style: none}
--->
-body{
-  line-height: 1.5;
-}
-
- #root {
-  padding: 12px;
- }
- a:visited {
-  color: var(--c-magenta);
-}
-</style>
+<link rel="stylesheet" href="style.css" />
 
 
 </head>
