--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
         <div class="action"></div>
       </nav>
       <main>
-        <div>
-          <a href="/c-programming-language.pdf">C Programming language</a> -
-          <a href="/gnu-c-intro-and-ref">GNU C intro and reference</a> -
-          <a href="/gnu-c-manual">GNU C Manual</a> -
-          <a href="/libc">GNU LibC</a>
+        <div style="text-align: left;">
+          <ul>
+            <li><a href="/c-programming-language.pdf">C Programming language</a></li>
+            <li><a href="/gnu-c-intro-and-ref">GNU C intro and reference</a></li>
+          
+            <li><a href="/c-iso-11">C ISO 11</a></li>
+            <li><a href="/gnu-c-manual">GNU C Manual</a></li>
+            <li><a href="/libc">GNU LibC</a></li>
+          </ul>
         </div>
       </main>
     </div>
